--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html, body {
 }
 
 .frontimg {
-    background-image: url(/frontimg.jpg);
+    background-image: url(https://images.unsplash.com/photo-1599634815922-783837212337?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80);
     position: relative;
     height: 100vh;
     /* background-repeat: no-repeat; */
